@@ -30,17 +30,19 @@ $news = new PMF_News($faqConfig);
 
 $archived        = PMF_Filter::filterInput(INPUT_GET, 'newsid', FILTER_VALIDATE_INT);
 $writeNewsHeader = $faqConfig->get('main.titleFAQ');
+$writeNewsRSS    = '';
 
 if (!is_null($archived)) {
     $writeNewsHeader .= $PMF_LANG['newsArchive'];
-    $writeNewsRSS     = '';
     $showAllNews      = sprintf('<a href="?%s">%s</a>', $sids, $PMF_LANG['newsShowCurrent']);
     $archived         = true;
 } else {
     $writeNewsHeader .= ' ' . $PMF_LANG['msgNews'];
-    $writeNewsRSS     = '&nbsp;<a href="feed/news/rss.php" target="_blank">' . 
-                        '<img id="newsRSS" src="assets/img/feed.png" width="16" height="16" alt="RSS" /></a>';
-    $showAllNews      = sprintf('<a href="?%snewsid=0">%s</a>', $sids, $PMF_LANG['newsShowArchive']);
+    if ($faqConfig->get('main.enableRssFeeds')) {
+        $writeNewsRSS = '&nbsp;<a href="feed/news/rss.php" target="_blank">' .
+            '<img id="newsRSS" src="assets/img/feed.png" width="16" height="16" alt="RSS" /></a>';
+    }
+    $showAllNews = sprintf('<a href="?%snewsid=0">%s</a>', $sids, $PMF_LANG['newsShowArchive']);
 }
 
 $tpl->parseBlock(
