@@ -53,7 +53,11 @@ try {
 
 // Define the header of the page
 $newsMainHeader = $faqConfig->get('main.titleFAQ') . $PMF_LANG['msgNews'];
-$newsFeed       = '&nbsp;<a href="feed/news/rss.php" target="_blank"><img id="newsRSS" src="assets/img/feed.png" width="16" height="16" alt="RSS" /></a>';
+if ($faqConfig->get('main.enableRssFeeds')) {
+    $newsFeed = '&nbsp;<a href="feed/news/rss.php" target="_blank"><img id="newsRSS" src="assets/img/feed.png" width="16" height="16" alt="RSS" /></a>';
+} else {
+    $newsFeed = '';
+}
 
 // Get all data from the news record
 $news = $oNews->getNewsEntry($newsId);
